mutants.out/log/crates__vault-client-rs__src__types__error.rs_line_61_col_9.log

*** crates/vault-client-rs/src/types/error.rs:61:9: replace <impl From<serde_json::Error> for VaultError>::from -> Self with Default::default()

*** mutation diff:
--- crates/vault-client-rs/src/types/error.rs
+++ replace <impl From<serde_json::Error> for VaultError>::from -> Self with Default::default()
@@ -53,17 +53,17 @@
         mount: String,
         path: String,
         field: String,
     },
 }
 
 impl From<serde_json::Error> for VaultError {
     fn from(err: serde_json::Error) -> Self {
-        Self::Deserialize(err)
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl From<FromUtf8Error> for VaultError {
     fn from(err: FromUtf8Error) -> Self {
         Self::Config(format!("invalid UTF-8: {err}"))
     }
 }


*** /usr/local/rustup/toolchains/1.94-x86_64-unknown-linux-gnu/bin/cargo nextest run --no-run --verbose --package=vault-client-rs@0.9.0 --all-features
warning: in config file .config/nextest.toml, ignoring unknown configuration key: profile.default.overrides.0.test-threads
   Compiling vault-client-rs v0.9.0 (/tmp/cargo-mutants-git-source-C25qxO.tmp/crates/vault-client-rs)
error[E0277]: the trait bound `VaultError: Default` is not satisfied
  --> crates/vault-client-rs/src/types/error.rs:61:9
   |
61 |         Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `VaultError`
  --> crates/vault-client-rs/src/types/error.rs:8:1
   |
 8 | pub enum VaultError {
   | ^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `vault-client-rs` (lib) due to 1 previous error
error: command `/usr/local/rustup/toolchains/1.94-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --package vault-client-rs@0.9.0 --all-features` exited with code 101

*** result: Failure(101)
